@@ -141,8 +141,9 @@ static const char *_linkCmd[] = {
 	"linkavr", "", "$1", NULL
 };
 
+/* $3 is replaced by assembler.debug_opts resp. port->assembler.plain_opts */
 static const char *_asmCmd[] = {
-	"asavr", "$l" , "-plosgff", "$1.s", NULL
+	"asavr", "$l" , "$3", "$1.s", NULL
 };
 
 /* Globals */
